# online-course-completion-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  retraining.py  train_model.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
app/: inference.py  main.py
lambda/: lambda_retraining.py
lambda_container/: Dockerfile  lambda_retraining.py
models/: features.pkl  gradient_boosting.pkl  prep.pkl  scaler.pkl
notebooks/Online_Course_Completion_Prediction.ipynb/: Untitled.ipynb  mlproject1
