[tool.poetry]
name = "online-course-completion-ml"
version = "0.1.0"
description = "Machine learning project to predict online course completion."
authors = ["Sahana <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
